src/tests/resources/operation/sv/error/error.sv
// Generated by CIRCT firtool-1.71.0
module Foo(	// sv/error/error.generic.mlir:3:3
  input        clk,	// sv/error/error.generic.mlir:4:8
  input  [7:0] a,	// sv/error/error.generic.mlir:4:19
               b,	// sv/error/error.generic.mlir:4:30
  output [7:0] res	// sv/error/error.mlir:1:55
);

  always @(posedge clk)	// sv/error/error.generic.mlir:6:5
    $error("error");	// sv/error/error.generic.mlir:7:7
  assign res = a + b;	// sv/error/error.generic.mlir:9:10, :10:5
endmodule

